--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>primeiro site</title>
+    <style>
+        body{background-color: azure;}
+    </style>
 </head>
 <body>
-   <h1>Meu primeiro sitr</h1> 
+   <h1>Meu primeiro site</h1> 
 </body>
 </html>
