--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>primeiro site</title>
     <style>
         body{background-color: azure;}
+        h1{color:crimson}
     </style>
 </head>
 <body>
